# tex-bot

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  compose.yml  flake.nix  main.py  pyproject.toml
.github/workflows/: release-please.yml
